# todo_backend

./: .env  Cargo.toml  README.md  bash_docker.sh  docker-compose.yml  init.sql  login.html  register.html  restart_docker.sh  style.css  tasks.html
migrations/: 0001_init.sql  0002_password_length.sql
src/: lib.rs  main.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  logout.rs  middleware.rs  mod.rs  register.rs
src/routes/tasks/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
