[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = [ "typed-header", "cookie" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.5", features = [ "cors" ] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio-rustls", "macros", "chrono" ] }
chrono = { version = "0.4", features = [ "serde" ] }
dotenvy = "0.15"
dotenvy_macro = "0.15"
validator = { version = "0.16", features = [ "derive" ] }
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
